artur/vault/video2/manifests-app/04-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: application
spec:
  ingressClassName: "system-ingress"
  rules:
    - host: "application.k.erushnikov.ru"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx
                port:
                  number: 80
